app/assets/stylesheets/ui-customizations.css.scss
/* ... */
.showcase {
	padding:0;
}

.showcase-title-page {
	max-width: 100vw;
    min-width: 70vw;
	margin-left: auto;
    margin-right: auto;

    max-width:75vw;
    min-width: 75vw;
    margin-left:0;

	overflow: hidden;
	div {
		white-space: normal;
	}
	h2 {
		text-align: center;
		font-size: 50px;
		text-shadow: 2px 2px 3px #333;
		text-transform: uppercase;
		font-family: GPCMed;
		white-space: normal;
	}
	.showcase-title-description {
		text-align: center;
		font-size: 22px;
		line-height: 30px;
		text-shadow: 2px 2px 0px #333;
		margin:0 30px;
	}
	.cover {
		position: absolute;
		left: 0;
		top:0;
		z-index: -1;
		width: 100%;
		opacity: .7;

		overflow: hidden;

		img {
			width:100%;

			height: auto !important;
			display: block;
		}
	}
}



.section-container-text {

	font-size: 15px;
	line-height: 25px;
	color: lightgray;
	overflow-x:hidden !important;
	padding:8px 15px !important;
	background:rgba(51,51,51,.85);
	border:solid 3px #fff;


}

.section-container-image img {
	border:solid 3px #fff;
}

.section-container-image {
	img.section-transcript {
		border:none;
		position:absolute;
		left:8px;
		bottom:8px;
		width:40px;
		height: 40px;
		opacity:.8;
		background: image_url('transcript.png');
		background-size:cover;
	}
}

.section-description {
	font-size:32px;
	margin:1em 3em;
}

.modal-content {
	background:#333;
	height:100%;
}

.sections-modals .modal-content .modal-body {
  padding: 0;
}

#banner {
	z-index:5000;
	position: fixed;
    width: 100%;
    p {
    	margin:0;
    }
}
#banner + div {
    padding-top: 100px;
}

.modal-header {
	padding:0 !important;
	min-height:0;
	button.close {
		z-index: 200;
		position: absolute;
		top:18px;
		right:18px;
		opacity: .7;
		border:solid 1px #fff;
			border-radius:3px;
		span {
			color:#fff;
			padding:0 8px;
			text-shadow: 0 1px 0 #000;
			font-size:34px;

			line-height:1em;
		}
	}
	button.close:hover {
		opacity: .9;
	}
}

.modal .modal-dialog {
	transition: none;
	transform: scale(.8,.8);
}

.modal.in .modal-dialog, .modal.out .modal-dialog {
	transform:none !important;
	transition: none;
	transform: scale(1,1);
}

.os-toolbar i {
	text-shadow: 1px 1px 1px #000;
}


.loading {
	text-align:center;
}

.item-detail {

	h2 {
		margin-bottom:20px;
	}
}
.items-list, .showcases-list {
    margin-top: 20px;
}

.btn-details {
	position: absolute;
	right:2.8em;
	top:4.5em;
	margin:0;
	z-index:200;
}

.details {

	position: absolute;
	right:2.8em;
	top:7em;
	transition-property: width, height;
	transition-duration: .3s;
	overflow-y:scroll;
	background:rgba(244,244,244,.8);
	border-radius:4px;
	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.23), 0 3px 10px rgba(0, 0, 0, 0.16);
	max-width:350px;
    z-index: 2;
	.well {
		background:transparent;
		box-shadow: none;

	}
	.metadata-list {
		dt {
			margin-bottom:.3em;
			font-size:15px;
			font-family: serif;
		}
		dd {
			font-size: 13px;
			color:#555555;
		}
	}
}

.modal-lg {
  width: 100%;
}

.modal-dialog {
    position: fixed;
}

#copy, #info {
  .modal-header {
    height: 30px;
  }
  .modal-dialog {
      bottom:50px;
      position:absolute;
      width:20% !important;
      left:0;
      margin:0;
      height: auto !important;
      button.close {
          top:12px;
      }
  }
}

body.modal-open {
    overflow: hidden;
}

/* animation */
#showcase-inner {
  animation-duration: 1.5s;
  animation-name: slidein;
}

@keyframes slidein {
  0% {
    margin-left: 100%;
  }
  55% {
    margin-left: -2%
  }
  100% {
    margin-left: 0%;
  }
}


/* openseadragon */
.os-toolbar {
  width: 30px;
  position: absolute !important;
  z-index: 100;
  a{
    color: white;
    &:hover {
      text-decoration: none;
      color: white;
    }
  }
}
.openseadragon-container {
  z-index: 1;
}

/*scroll bars*/

#test {
	background:black;

}

.ps-container {

  > .ps-scrollbar-x-rail {

	display:block !important;
	transition:none;
	height:15px;

	width:50%;
	margin-left:25%;
	margin-right:25%;
  margin-bottom: 10px;
	.ps-scrollbar-x {
		height:15px;
	}
}

  #showcase-inner + .ps-scrollbar-x-rail {
    animation-duration: 0.5s;
    animation-name: scrollfadein;
    opacity: 0.7;
    background-color: #dedede;
    .ps-scrollbar-x {
        background-color: #666;
    }
  }
}

@keyframes scrollfadein {
  0% {
    opacity: 0.1;
  }
  100% {
    opacity: 0.7;
  }
}

.modal-body .ps-container > .ps-scrollbar-y-rail {
    right: 40px;
}

@import "_material-design-overwrites.scss";

